...
            android:textColor="@color/black"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/card_review"
            android:layout_width="match_parent"
...
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/comment"
                        android:textSize="16sp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_comment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:isScrollContainer="true"
                    android:nestedScrollingEnabled="true"
                    android:paddingBottom="80dp"
...
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    app:counterEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/comment_TIET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_comment" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/send_Btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/send_comment"
                    app:icon="@drawable/ic_send"
                    app:iconGravity="textEnd"
                    app:iconTint="@color/white" />
...
